; ModuleID = '/home/carl/AnghaBench/linux/fs/ext4/extr_super.c_ext4_superblock_csum_set.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ext4/extr_super.c_ext4_superblock_csum_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }
%struct.ext4_super_block = type { i32 }
%struct.TYPE_2__ = type { %struct.ext4_super_block* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ext4_superblock_csum_set(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  %3 = alloca %struct.ext4_super_block*, align 8
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  %4 = load %struct.super_block*, %struct.super_block** %2, align 8
  %5 = call %struct.TYPE_2__* @EXT4_SB(%struct.super_block* %4)
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.ext4_super_block*, %struct.ext4_super_block** %6, align 8
  store %struct.ext4_super_block* %7, %struct.ext4_super_block** %3, align 8
  %8 = load %struct.super_block*, %struct.super_block** %2, align 8
  %9 = call i32 @ext4_has_metadata_csum(%struct.super_block* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  br label %18

12:                                               ; preds = %1
  %13 = load %struct.super_block*, %struct.super_block** %2, align 8
  %14 = load %struct.ext4_super_block*, %struct.ext4_super_block** %3, align 8
  %15 = call i32 @ext4_superblock_csum(%struct.super_block* %13, %struct.ext4_super_block* %14)
  %16 = load %struct.ext4_super_block*, %struct.ext4_super_block** %3, align 8
  %17 = getelementptr inbounds %struct.ext4_super_block, %struct.ext4_super_block* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  br label %18

18:                                               ; preds = %12, %11
  ret void
}

declare dso_local %struct.TYPE_2__* @EXT4_SB(%struct.super_block*) #1

declare dso_local i32 @ext4_has_metadata_csum(%struct.super_block*) #1

declare dso_local i32 @ext4_superblock_csum(%struct.super_block*, %struct.ext4_super_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
